# wmca

./: .gitignore  README.md  experiment_logs.md  findings.md  pyproject.toml  resources.md
experiments/: average_seeds.py  cml_self_analysis.py  dmcontrol_data_gen.py  dmcontrol_prediction.py  gol_learned_cml.py  gol_nca_paralesn.py  gol_prediction.py  grid_world_planning.py  improved_pareto.py  int8_ablation.py  lorenz_prediction.py  pareto_plot.py  pathak_comparison.py  pde_gray_scott.py  pde_heat.py  pde_wave.py  phase25a_chaotic_maps.py  phase25b_harder_pdes.py  phase25c_more_cas.py  phase25d_scaleup.py  phase2_ablation.py  phase2_paralesn_ablation.py  run_multiseed.sh  trust_gate_viz.py  unified_ablation.py
experiments/results/: e2_seed0.json  e2_seed1.json  e2_seed2.json  e3_seed0.json  e3_seed2.json  e3b_only_seed0.json  e3b_only_seed1.json  e3b_only_seed2.json  e3c_seed0.json  e6_seed0.json  e6_seed1.json  int8_ablation.json  unified_ablation.json  unified_ablation_e2_compare.json  unified_ablation_seed42.json  unified_ablation_v2.json  unified_ablation_v3.json
experiments/results/e3_multi_seed/: e3_seed1.json
experiments/results/e3c_multiseed/: e3c_seed1.json  e3c_seed2.json
src/wmca/: benchmarks.py  model_registry.py
src/wmca/envs/: __init__.py  atari_pong.py  gray_scott_control.py  heat_control.py
src/wmca/envs/autumn/: __init__.py  base.py  data_gen.py  disease_spreading.py  gravity.py  water_flow.py
src/wmca/modules/: __init__.py  cml.py  hybrid.py  norm.py  paralesn.py
src/wmca/training/: __init__.py
src/wmca/utils/: __init__.py
